# goit-pyweb-hw-05-websockets

./: main.js  pyproject.toml  server.py
